--- a/MapKitDemo/LocalizeFile/es.lproj/Localizable.strings
+++ b/MapKitDemo/LocalizeFile/es.lproj/Localizable.strings
@@ -5,7 +5,7 @@
   Created by iMac on 23/02/21.
   
 */
-"My Name is karan" = "Mi nombre es karan";
+"My Name is Karan" = "Mi nombre es Karan";
 "My Surname is Chodavadiya" = "Mi apellido es Chodavadiya";
 "hello" = "Hola";
 "How Are you" = "Cómo estás";
